--- a/Plastic.vcxproj.filters
+++ b/Plastic.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="list.h">
       <Filter>Header Files\basic</Filter>
     </ClInclude>
+    <ClInclude Include="priority_queue.h">
+      <Filter>Header Files\basic</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
