--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="forward_list.h" />
     <ClInclude Include="list.h" />
     <ClInclude Include="priority_queue.h" />
+    <ClInclude Include="red_black_tree.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
