--- a/Plastic.vcxproj.filters
+++ b/Plastic.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="priority_queue.h">
       <Filter>Header Files\basic</Filter>
     </ClInclude>
+    <ClInclude Include="red_black_tree.h">
+      <Filter>Header Files\bst</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
