--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="stack.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="avl_tree.h" />
     <ClInclude Include="deque.h" />
     <ClInclude Include="forward_list.h" />
     <ClInclude Include="list.h" />
