add b_tree to readme

--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="avl_tree.h" />
+    <ClInclude Include="b_tree.h" />
     <ClInclude Include="deque.h" />
     <ClInclude Include="forward_list.h" />
     <ClInclude Include="list.h" />
