--- a/Plastic.vcxproj.filters
+++ b/Plastic.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="queue.h">
-      <Filter>Header Files\data structure</Filter>
-    </ClCompile>
     <ClCompile Include="stack.h">
       <Filter>Header Files\data structure</Filter>
     </ClCompile>
@@ -38,7 +35,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="deque.h">
+    <ClInclude Include="queue.h">
       <Filter>Header Files\data structure</Filter>
     </ClInclude>
     <ClInclude Include="forward_list.h">
