--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="stack.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="vector.h" />
     <ClInclude Include="avl_tree.h" />
     <ClInclude Include="bigint.h" />
     <ClInclude Include="b_tree.h" />
