--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -25,11 +25,12 @@
     <ClCompile Include="stack.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="queue.h" />
     <ClInclude Include="vector.h" />
     <ClInclude Include="avl_tree.h" />
     <ClInclude Include="bigint.h" />
     <ClInclude Include="b_tree.h" />
-    <ClInclude Include="queue.h" />
+    <ClInclude Include="deque.h" />
     <ClInclude Include="forward_list.h" />
     <ClInclude Include="list.h" />
     <ClInclude Include="priority_queue.h" />
