--- a/Plastic.vcxproj.filters
+++ b/Plastic.vcxproj.filters
@@ -35,7 +35,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="queue.h">
+    <ClInclude Include="deque.h">
       <Filter>Header Files\data structure</Filter>
     </ClInclude>
     <ClInclude Include="forward_list.h">
@@ -60,6 +60,9 @@
       <Filter>Header Files\algorithm</Filter>
     </ClInclude>
     <ClInclude Include="vector.h">
+      <Filter>Header Files\data structure</Filter>
+    </ClInclude>
+    <ClInclude Include="queue.h">
       <Filter>Header Files\data structure</Filter>
     </ClInclude>
   </ItemGroup>
