--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -20,10 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="binary_search_tree.h" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="sort.h" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="algorithm.h" />
     <ClInclude Include="vector.h" />
     <ClInclude Include="avl_tree.h" />
     <ClInclude Include="b_tree.h" />
