--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -20,10 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="binary_search_tree.h" />
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="algorithm.h" />
     <ClInclude Include="vector.h" />
     <ClInclude Include="avl_tree.h" />
     <ClInclude Include="b_tree.h" />
