chore: add filters

--- a/Plastic.vcxproj.filters
+++ b/Plastic.vcxproj.filters
@@ -13,42 +13,51 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\sequence">
+      <UniqueIdentifier>{cb31360d-b9b3-458f-ac2e-4fbdb7fd9b25}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\binary search tree">
+      <UniqueIdentifier>{69b893b8-7d5c-4ca3-8eb1-e630f110b189}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\heap">
+      <UniqueIdentifier>{555dd929-81c4-4c52-a594-3e6938e23037}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="binary_search_tree.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="utils.h">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="binary_search_tree.h">
+      <Filter>Header Files\binary search tree</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="avl_tree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="b_tree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="deque.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\sequence</Filter>
     </ClInclude>
     <ClInclude Include="forward_list.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\sequence</Filter>
     </ClInclude>
     <ClInclude Include="list.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="priority_queue.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="red_black_tree.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\sequence</Filter>
     </ClInclude>
     <ClInclude Include="vector.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\sequence</Filter>
+    </ClInclude>
+    <ClInclude Include="priority_queue.h">
+      <Filter>Header Files\heap</Filter>
+    </ClInclude>
+    <ClInclude Include="avl_tree.h">
+      <Filter>Header Files\binary search tree</Filter>
+    </ClInclude>
+    <ClInclude Include="b_tree.h">
+      <Filter>Header Files\binary search tree</Filter>
+    </ClInclude>
+    <ClInclude Include="red_black_tree.h">
+      <Filter>Header Files\binary search tree</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
