--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -30,7 +30,7 @@
     <ClInclude Include="deque.h" />
     <ClInclude Include="forward_list.h" />
     <ClInclude Include="list.h" />
-    <ClInclude Include="priority_queue.h" />
+    <ClInclude Include="binary_heap.h" />
     <ClInclude Include="red_black_tree.h" />
   </ItemGroup>
   <ItemGroup>
