--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -19,11 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="binary_search_tree.h" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="binary_search_tree.h" />
+    <ClInclude Include="utils.h" />
     <ClInclude Include="vector.h" />
     <ClInclude Include="avl_tree.h" />
     <ClInclude Include="b_tree.h" />
@@ -90,7 +90,6 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
-  <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
