--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -32,7 +32,7 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="Plastic.natvis" />
+    <Natvis Include="plastic.natvis" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
