--- a/Plastic.vcxproj
+++ b/Plastic.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="plastic.ixx" />
-    <ClCompile Include="test.ixx" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
