--- a/Plastic/Plastic.vcxproj.filters
+++ b/Plastic/Plastic.vcxproj.filters
@@ -15,27 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="algorithm.ixx">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-    <ClCompile Include="data_structure.ixx">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-    <ClCompile Include="plastic.ixx">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Natvis Include="plastic.natvis">
-      <Filter>Resource Files</Filter>
-    </Natvis>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="README.md">
-      <Filter>Resource Files</Filter>
-    </None>
   </ItemGroup>
 </Project>
